# Fog-Rendering

./: CMakeLists.txt  README.md  main.cpp
application/: CMakeLists.txt  application.cpp  application.h  assimpLoader.cpp  assimpLoader.h
application/camera/: camera.cpp  camera.h  cameraControl.cpp  cameraControl.h  gameCameraControl.cpp  gameCameraControl.h  orthographicCamera.cpp  orthographicCamera.h  perspectiveCamera.cpp  perspectiveCamera.h  trackBallCameraControl.cpp  trackBallCameraControl.h
assets/shaders/: cube.frag  cube.vert  rockFog.frag  rockFog.vert
glframework/: CMakeLists.txt  core.h  geometry.cpp  geometry.h  object.cpp  object.h  scene.cpp  scene.h  shader.cpp  shader.h  texture.cpp  texture.h
glframework/light/: ambientLight.cpp  ambientLight.h  directionalLight.cpp  directionalLight.h  light.cpp  light.h  pointLight.cpp  pointLight.h  spotLight.cpp  spotLight.h
glframework/material/: cubeMaterial.cpp  cubeMaterial.h  material.cpp  material.h  rockFogMaterial.cpp  rockFogMaterial.h
glframework/mesh/: mesh.cpp  mesh.h
glframework/renderer/: renderer.cpp  renderer.h
glframework/tools/: tools.cpp  tools.h
wrapper/: CMakeLists.txt  checkError.cpp  checkError.h
